--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
 		<!-- topojson -->
   		<script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/3.0.2/topojson.min.js"></script>
+
+  		<title>US COVID-19 Cases By County</title>
 	</head>
 
 	<style>
